# FluidDynamicTools

./: .editorconfig  .gitattributes  .gitignore  README.md
COOLFluiD/: convert_mesh.py
DS1V/: CollisionRate.m  DS1Rate.py  DS1VD.in  DS1_openmp_reac.f90  DS1_openmp_reac_product.f90  DS1_openmp_reac_sample.f90  DS1_post.f90  ExtractVrate.py  GaussQuad.f90  Instruction.md  MatlabMFMCrate.m  Note_of_MFMC.tex  ProbSampleR.m  ProbSampleTR.m  build.sh  cleanVrate.sh  geom.eps  input.txt  input2.txt  runO2N2neq.sh  run_ireac_ds1v.sh  run_ireac_ds1v_neq.sh  run_ireac_eqpost.py  run_ireac_neqpost.py  run_ireac_post.sh  run_neqpost.py
DS1V/sources/: CMakeLists.txt
DS1V/sources/src/: ADAPT_CELLS.f90  AIFX.f90  ALLOCATE_GAS.f90  ARGON.f90  CALC.f90  CALC_TOTXSEC.f90  CHECK_REACTION.f90  CHECK_RXSECTION.f90  COLLISIONS.f90  DISSOCIATION.f90  DS1.f90  ENERGY.f90  ERF.f90  EXPCOL.f90  EXPCOL_chimin_005.f90.old  EXTEND_MNM.f90  FIND_CELL.f90  FIND_CELL_MB.f90  GAM.f90  GAS.f90  GEOM.f90  HARD_SPHERE.f90  HELIUM_XENON.f90  IDEAL_AIR.f90  IDEAL_GAS.f90  INDEX_MOLS.f90  INELASTIC_RT.f90  INELASTIC_VT.f90  INITIALISE_SAMPLES.f90  INIT_REAC.f90  ISHR.f90  LBS.f90  MFDSMC.f90  MOLECS.f90  MOLECULES_ENTER.f90  MOLECULES_MOVE.f90  N2OScatter.f90  N2OScatter_old.f90  NUMCHAR4.f90  OUTPUT.f90  (+46 more)
Eilmer3/: compile.sh  compile_single.sh  get_res.py  o2-MF.lua  o2-MW.lua  o2-QCT.lua  o2-VT-QCT.lua  o2shock.cfg  plot2.sh  poshax2tec.py  run.sh
Fortran/: CMakeLists.txt  f90split.py
Plot3D_Tools/: ConcateBlocks.m  ExportFUNCTION.m  ExportXYZ.m  PLOT3D_post.asv  PLOT3D_post.m  ReadCellGrid.m  ReadFlow.m  ReadFlowEilmer3.m  ReadGrid.m  ReadName.m  sphere.f  sphere.g  sphere.grd  sphere.nam  sphere0.f  sphere0.g  sphere0.grd
SPARTA_Tools/: compile.sh  (+5 more)
(+266 files in other folders)
